php-src/ext/phar/tests/bug71331.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Uncaught UnexpectedValueException: phar error: "/root/php-src/ext/phar/tests/bug71331.tar" is a corrupted tar file (invalid entry size) in /root/php-src/ext/phar/tests/bug71331.php:2
Stack trace:
#0 /root/php-src/ext/phar/tests/bug71331.php(2): PharData->__construct('/root/php-src/e...')
#1 {main}
  thrown in /root/php-src/ext/phar/tests/bug71331.php on line 2